--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "@pulumi/aws": "^6.66.1",
         "@pulumi/pulumi": "^3.113.0"
     }
 }
